# deepiri-conduit

./: .gitignore  Cargo.toml  NOTICE  PLAN.md  README.md  ROADMAP.md  install.sh  setup.sh
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
scripts/: install.sh
src/: lib.rs  main.rs  project_id.rs
src/cli/: bench.rs  config_cmd.rs  config_validate.rs  connect.rs  cp_cmd.rs  db.rs  describe.rs  doctor.rs  down.rs  env_cmd.rs  exec_cmd.rs  graph.rs  image.rs  init.rs  link.rs  logs.rs  mod.rs  port_forward.rs  proxy_cmd.rs  ps.rs  route.rs  run_cmd.rs  snapshot.rs  submod.rs  top.rs  ui.rs  up.rs
src/compose/: emit.rs  mod.rs  parser.rs  rewriter.rs  types.rs
src/config/: conduit_yml.rs  global.rs  mod.rs
src/dns/: hosts.rs
src/docker/: client.rs  container.rs  mod.rs  network.rs
src/proxy/: manager.rs  mod.rs  traefik.rs
src/registry/: state.rs
src/submod/: conflict.rs  mod.rs  resolver.rs
src/tunnel/: tcp.rs
src/ui/: dashboard.rs  mod.rs  server.rs
tests/: integration_compose.rs
tests/fixtures/: docker-compose.fixture.yml
